fixed contrast errors, changed default link color (which appeared to not have enough contrast for WAVE)

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: rgb(63, 63, 63);
-  color: rgb(234, 234, 234);
+  color: rgb(204, 204, 204);
 
   text-align: center;
 }
@@ -23,7 +23,7 @@ h2 {
 
 /*general class definition*/
 body {
-  background-color: #dcdcdc;
+  background-color: #ffffff;
 }
 
 /*general class definition*/
@@ -38,7 +38,7 @@ footer{background-color: rgb(63, 63, 63);}
 }
 
 /*general class definition*/
-li{color: rgb(89, 73, 91);}
+li{color: rgb(37, 37, 37);}
 
 /*general class definition*/
 p{font-size: 18px;}
@@ -49,10 +49,11 @@ p{font-size: 18px;}
 /*custom ID for wiki link*/
 #wikilink{
 text-align: center;
+color: rgb(9, 15, 85);
 }
 
 /*custom class for changing grey text to purple (Currently not working, WIP)*/
-.gray{color: rgb(67, 40, 97);}
+.gray{color: rgb(56, 56, 56);}
 
 
 /*general font definition*/
@@ -74,8 +75,8 @@ img {
   padding-bottom: 20px;
 
   background-color: rgb(63, 63, 63);
-  color: rgb(234, 234, 234);
-  text-decoration-color: rgb(234, 234, 234);
+  color: rgb(255, 255, 255);
+  text-decoration-color: rgb(255, 255, 255);
   text-align: center; 
 }
 
@@ -83,7 +84,7 @@ img {
 .buttonLink{
 
       background-color: #a6ffde;
-  color: rgb(57, 57, 57);
+  color: rgb(24, 24, 24);
   padding: 15px;
   text-align: center;
   text-decoration: none;
@@ -111,14 +112,14 @@ img {
 
 /*custom ID for returning to the main page*/
 #mainpage{text-align: center;
-background-color: rgb(63, 63, 63);
-  color: rgb(234, 234, 234);
+background-color: rgb(27, 27, 27);
+  color: rgb(255, 255, 255);
 padding:20px;}
 
 /*custom ID for segment title*/
 #segment_title{
     background-color: rgb(63, 63, 63);
-  color: rgb(234, 234, 234);
+  color: rgb(255, 255, 255);
     padding:20px;}
 
 /*custom ID for flexbox*/
@@ -139,7 +140,11 @@ ul{width: 360px;}
       .flex-container {
         display: flex;
         flex-wrap: nowrap;
-        background-color: DodgerBlue;
+        background-color: rgb(255, 255, 255);
       }
       
-
+/*change link color because the default isn't accessible according to wave */
+a {
+  color: #243995; 
+  text-decoration: underline;
+}
